<resources>
    <string name="app_name">CYBURGER</string>

    <string name="title_combos">Combos</string>
    <string name="title_dashboard">Cardápio</string>
    <string name="title_notifications">Pedidos</string>
    <string name="title_profile">Perfil</string>

    <string name="general_button_save">Salvar</string>
    <string name="general_button_cancel">Cancelar</string>
    <string name="general_label_requiredfield">Campo requerido</string>
    <string name="general_validation_invalidDateFormat">Data inválida</string>

    <string name="menu_profile">Perfil</string>


    <string name="login_label_email">E-mail</string>
    <string name="login_label_password">Senha</string>
    <string name="login_label_rememberMe">Lembrar-me</string>
    <string name="login_button_singIn">Entrar</string>
    <string name="login_label_incorrectPassword">E-mail ou senha inválidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_signIn">Entrar</string>
    <string name="title_signUp">Cadastrar</string>
    <string name="confirmPassword_hint">Confirme sua senha</string>
    <string name="signUp">Cadastrar</string>
    <string name="or">ou</string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="menu_manage_items">Gerenciar itens</string>
    <string name="manage_items_item_description">Descrição do item*</string>
    <string name="manage_items_item_price">Preço do item*</string>
    <string name="manage_items_add_item">Adicionar item</string>
    <string name="manage_items_item_ingredients">Ingredientes*</string>
    <string name="manage_items_item_measure_unit">Unidade de medida*</string>
    <string name="general_search">Buscar</string>
    <string name="general_unmatching_password">Senhas não conferem</string>
    <string name="login_error_invalid_email">E-mail inválido</string>
    <string name="login_error_weakPassword">A senha deve possuir no mínimo 6 caracteres</string>
    <string name="login_error_email_already_taken">Este e-mail já está em uso</string>
    <string name="login_error_unable_load_profile">Não foi possível carregar o perfil do usuário.</string>
    <string name="general_plus_signal">+</string>
    <string name="sign_up_display_name">Nome</string>
    <string name="sign_up_password">Senha</string>
    <string name="sign_up_email">E-mail</string>
    <string name="menu_manage_combos">Gerenciar combos</string>
    <string name="menu_manage_onsale">Gerenciar promoções</string>
    <string name="manage_combos_combo_day">Dia do combo*</string>
    <string name="ordering_confirm">Confirmar</string>
    <string name="general_remove">Remover</string>
    <string name="general_add">Adicionar</string>
    <string name="login_error_no_connection">Não foi possível conectar.</string>
    <string name="manage_combos_required_field">Escolha um ou mais itens para o combo</string>
    <string name="general_button_leave">Sair</string>
    <string name="order_finishOrder">Concluir</string>
    <string name="order_cancel">Cancelar</string>
    <string name="menu_sign_out">Desconectar</string>
    <string name="sign_in_fragment">sign_in_fragment</string>
    <string name="sign_up_fragment">sign_up_fragment</string>
    <string name="login_error_unsynced">Suas informações estão dessincronizadas. \n\nPor favor, conecte seu telefone à internet</string>
    <string name="login_message_remember">Deseja entrar automaticamente em sua conta?</string>
    <string name="menu_manage_parameters">Gerenciar paramêtros</string>
    <string name="combos_search">Procurar por combos</string>
    <string name="items_search">Procurar no cardápio</string>
    <string name="orders_search">Procurar nos pedidos</string>
    <string name="SUCCESS_COMBO">Combo adicionado</string>
    <string name="ERROR_COMBO">Erro ao adicionar combo</string>
    <string name="UPDATE_COMBO">Combo atualizado</string>
    <string name="ERROR_UPDATE_COMBO">Erro ao atualizar combo</string>
    <string name="REMOVED_COMBO">Combo removido</string>
    <string name="ERROR_REMOVE_COMBO">Erro ao remover combo</string>
    <string name="REMOVE_COMBO">Remover combo</string>
    <string name="QST_REMOVE_ITEM">Tem certeza que deseja remover esse item?</string>
    <string name="VAR_PRICE_SUGESTION">Preço mínimo sugerido: R$ {valor}</string>
    <string name="SUG_POINTS">Pontos sugeridos:&#160;</string>
    <string name="ok_add_item">Item adicionado</string>
    <string name="err_add_item">Erro ao adicionar item</string>
    <string name="ok_update_item">Item atualizado</string>
    <string name="err_update_item">Erro ao atualizar item</string>
    <string name="ok_remove_item">Item removido</string>
    <string name="err_remove_item">Erro ao remover item</string>
    <string name="remove_combo">Remover combo</string>
    <string name="qst_remove_combo">Tem certeza que deseja remover esse item?</string>
    <string name="type_unit">Unidade</string>
    <string name="type_fatia">Fatia</string>
    <string name="type_big_portion">Porção grande</string>
    <string name="type_avg_portion">Porção média</string>
    <string name="type_little_portion">Porção pequena</string>
    <string name="type_dose">Dose</string>
    <string name="type_250">250ml</string>
    <string name="type_600">600ml</string>
    <string name="type_1l">1L</string>
    <string name="type_2l">2L</string>
    <string name="type_25l">2.5L</string>
    <string name="type_3l">3L</string>
    <string name="par_add">Paramêtros adicionados</string>
    <string name="err_par">Erro ao adicionar paramêtros</string>
    <string name="par_update">Paramêtros atualizados</string>
    <string name="err_update_par">Erro ao atualizar paramêtros</string>
    <string name="get_order">Fazer pedido</string>
    <string name="confirmad_order">PEDIDO CONFIRMADO</string>
    <string name="prefix_cyburger">cyburger-</string>
    <string name="order_complete">Pedido concluído!</string>
    <string name="err_complete_order">Erro ao concluir pedido</string>
    <string name="err_points_profile">Erro ao vincular os pontos ao perfil</string>
    <string name="client_404">Cliente do pedido não encontrado</string>
    <string name="complete_order">CONCLUIR PEDIDO</string>
    <string name="restore_previous_order">Restaurar pedido anterior</string>
    <string name="reset_order">Zerar pedido</string>
    <string name="order_comfirmed">Pedido confirmado</string>
    <string name="wait_order">Tudo certo! Seu pedido vai chegar logo</string>
    <string name="canceled_order">Pedido cancelado</string>
    <string name="msg_cancel_order">Cancelar Pedido</string>
    <string name="qst_cancel_order">Deseja cancelar o pedido?</string>
    <string name="exit_app">Sair do aplicativo</string>
    <string name="profile_photo">Foto do perfil</string>
    <string name="updated_profile">Perfil atualizado</string>
    <string name="err_update_profile">Erro ao atualizar perfil</string>
    <string name="zxxzx">cyburger-</string>
    <string name="you_next">&#160;você é o próximo!</string>
    <string name="order_ok">&#160;seu pedido está pronto!</string>
    <string name="you_order_canceled">&#160;seu pedido foi cancelado!</string>
    <string name="sem_pedidos_lista">Não há pedidos nesta lista</string>
    <string name="n_o_h_combos_nesta_lista">Não há combos nesta lista</string>
</resources>
