<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:iconTint="@color/black"
        android:id="@+id/action_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/action_manage_combos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visible="false"
        android:title="@string/menu_manage_combos" />

    <item
        android:id="@+id/action_manage_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visible="false"
        android:title="@string/menu_manage_items" />

    <item
        android:id="@+id/action_manage_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visible="false"
        android:title="@string/menu_manage_parameters" />

    <item
        android:id="@+id/action_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visible="true"
        android:title="@string/menu_sign_out" />

</menu>