<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/manage_items_item_description"
        app:layout_constraintLeft_toLeftOf="@+id/itemDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemDescription"
        style="@style/AppTheme.CyburgerEditText"

        android:layout_width="0dp"
        android:layout_height="@dimen/default_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionLabel" />


    <TextView
        android:id="@+id/itemPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/manage_items_item_price"
        app:layout_constraintLeft_toLeftOf="@+id/itemPrice"
        app:layout_constraintTop_toBottomOf="@+id/itemDescription" />

    <EditText
        android:id="@+id/itemPrice"
        style="@style/AppTheme.CyburgerEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPriceLabel" />

    <TextView
        android:id="@+id/itemIngredientsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/manage_items_item_ingredients"
        app:layout_constraintLeft_toLeftOf="@+id/itemIngredients"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <EditText
        android:id="@+id/itemIngredients"
        style="@style/AppTheme.CyburgerEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemIngredientsLabel" />

    <TextView
        android:id="@+id/itemMeasureUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/manage_items_item_measure_unit"
        app:layout_constraintLeft_toLeftOf="@+id/itemMeasureUnitCbx"
        app:layout_constraintTop_toBottomOf="@+id/itemIngredients" />

    <Spinner
        android:id="@+id/itemMeasureUnitCbx"
        style="@style/AppTheme.CyburgerSpinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemMeasureUnitLabel" />

    <Button
        android:id="@+id/saveItemBtn"
        style="@style/AppTheme.CyburgerButton"
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/general_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
