<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment">


    <com.cynerds.cyburger.components.JBEmail
        android:id="@+id/signUserInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:isRequired="true"
        app:hint="@string/login_label_email"
        app:displayLabel="false"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"></com.cynerds.cyburger.components.JBEmail>

    <com.cynerds.cyburger.components.JBPassword
        android:id="@+id/signInPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:isRequired="true"
        app:displayLabel="false"
        app:hint="@string/login_label_password"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUserInTxt"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"></com.cynerds.cyburger.components.JBPassword>

    <com.cynerds.cyburger.components.JBCheckbox
        android:id="@+id/signInRememberCbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:checkboxText="@string/login_label_rememberMe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPasswordTxt"
        tools:layout_constraintTop_creator="1" />


    <com.cynerds.cyburger.components.JBButton
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:buttonText="Entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/signInRememberCbx"
        app:layout_constraintTop_toBottomOf="@+id/signInRememberCbx"></com.cynerds.cyburger.components.JBButton>



</android.support.constraint.ConstraintLayout>
